0.07    2011-01-27

- Fix module name in pod.

- Add a dep on Dist::CheckConflicts 0.02 to modules which use this plugin (not
  0.01).


0.06    2011-01-16

- The dist.ini wouldn't load if a -script wasn't defined in the Conflicts
  config section.


0.05    2011-01-03

- The conflict warning added to your Makefile.PL or Build.PL now mentions the
  generated script if you ask for one to be generated. (Jesse Luehrs)

- No -also will be passed to Dist::CheckConflicts if you don't have
  dependencies. (Jesse Luehrs)

- Require Dist::CheckConflicts 0.02, which has better -also handling.


0.04    2010-12-31

- In the generated conflict module, all of the distro's runtime prereqs are
  passed in the -also parameter to Dist::CheckConflicts.


0.03    2010-12-31

- Added support for a -script config key, which tells this plugin to generate
  a script of the given name that lists conflicts. (Jesse Luehrs)


0.02    2010-11-22

- This module loaded Test::ConsistentVersion, which it wasn't actually using.


0.01    2010-11-22

- Initial release